opam-version: "1.2"
version: "v0.10.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/async"
bug-reports: "https://github.com/janestreet/async/issues"
dev-repo: "git+https://github.com/janestreet/async.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "async_extra"             {>= "v0.10" & < "v0.11"}
  "async_kernel"            {>= "v0.10" & < "v0.11"}
  "async_unix"              {>= "v0.10" & < "v0.11"}
  "core"                    {>= "v0.10" & < "v0.11"}
  "ppx_driver"              {>= "v0.10" & < "v0.11"}
  "ppx_jane"                {>= "v0.10" & < "v0.11"}
  "jbuilder"                {build & >= "1.0+beta12"}
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Monadic concurrency library

Part of Jane Street's Core library
The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.
"
